Add get exercise endpoint
